--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 	</head>
 	<body>
 		<script>
-			window.addEventListener('click', async () => {
-  				const response = await fetch('/.netlify/functions/hello-world')
-					.then((response) => response.json());
-				document.write(JSON.stringify(response));
-			});
+			const prompt = "Translate the following English text to French: '{here is a test}'";
+			const url = `https://subtle-licorice-abd04e.netlify.app/.netlify/functions/gptendpoint?prompt=${encodeURIComponent(prompt)}`;
+
+			fetch(url)
+			.then(response => response.json())
+			.then(data => console.log(data))
+			.catch(error => console.error('Error:', error));
 		</script>
 	</body>
 </html>
